<resources>
    <string name="app_name">MadLevel4Task2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="welcome">Welcome</string>
    <string name="instructions">Instructions: select rock, paper, or scissors to play.</string>
    <string name="player_win">You win!</string>
    <string name="computer_win">Computer wins!</string>
    <string name="draw">Draw</string>
    <string name="computer">Computer</string>
    <string name="player">You</string>
    <string name="versus">V.S.</string>
    <string name="game_fragment_title">Mad Level 4 Task 2</string>
    <string name="history_fragment_title">Your Game History</string>
</resources>